--- a/projects/test-libraries/src/app/app.component.scss
+++ b/projects/test-libraries/src/app/app.component.scss
@@ -4,20 +4,18 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
 
-  .fb-form {
-    box-sizing: border-box;
-    margin: 10px;
-    height: 300px;
-    width: 400px;
+.wrapper .fb-form {
+  box-sizing: border-box;
+  margin: 10px;
+  height: 300px;
+  width: 400px;
+}
 
-    .version{
-      text-align: right;
-      margin-top: 5px;
-      font-style:italic;
-      color: gray;
-    }
-
-  }
-
+.fb-form .version{
+  text-align: right;
+  margin-top: 5px;
+  font-style:italic;
+  color: gray;
 }
